# src/main/java/com/example/todolist/controllers/RegisterRequest.java
@@ -1,20 +1,0 @@
-package com.example.todolist.controllers;
-
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Data;
-import lombok.NoArgsConstructor;
-
-
-
-@Data
-@Builder
-@AllArgsConstructor
-@NoArgsConstructor
-public class RegisterRequest {
-
-    private String name;
-    private String email;
-    private String password;
-
-}
